examples/test/testpolicy3929.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3929
  namespace: namespace10
spec:
  podSelector:
    matchLabels:
      key14: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value41
          key4: value40
          key8: value29
      podSelector:
        matchLabels:
          key47: value4
          key34: value35
